TEST_PROGRAMS/INVALID/02/multipleReturns.go
package main

//this is both a type and parse error
func f(a int, b string){
    return a,b;
}

func main(){
    f(1,3)
}


